# tdjson-rs

./: Cargo.toml
src/: client.rs  lib.rs  log.rs
src/log/: errors.rs  mod.rs
