[package]
name = "tdjson"
version = "0.2.2"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
description = "TDLIB Json Client for Rust"
documentation = "https://docs.rs/crate/tdjson"
repository = "https://github.com/mersinvald/tdjson-rs"
license = "MIT"
keywords = ["telegram", "tdlib", "bindings"]

[dependencies]
tdjson-sys = { version = "0.1.5" }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(feature = "serde_json")'.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }